[gd_scene load_steps=2 format=3 uid="uid://cohqiu8tjwi4e"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_xo7mq"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_xo7mq")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathEnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPos_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 50)
gizmo_extents = 30.0

[node name="SpawnPos_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 175)
gizmo_extents = 30.0

[node name="SpawnPos_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 300)
gizmo_extents = 30.0

[node name="SpawnPos_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 425)
gizmo_extents = 30.0

[node name="SpawnPos_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 550)
gizmo_extents = 30.0

[node name="SpawnPos_06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 675)
gizmo_extents = 30.0
